--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,22 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CPAWeb"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
-        >
+        tools:targetApi="31">
         <activity
-            android:name=".communityHome"
+            android:name=".Avaliacao"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+
+        </activity>
+        <activity
+            android:name=".CommunityHome"
             android:exported="false" />
         <activity
             android:name=".RegisterCommon"
@@ -32,11 +39,11 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".Login"
             android:exported="false" />
+
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/rounded_left_border" />
@@ -46,19 +53,21 @@
             android:exported="false" />
         <activity
             android:name=".LoginOrChoice"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".LoginOrRegister"-->
-<!--            android:exported="false" />-->
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".LoginOrRegister" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".splash"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
         <activity
             android:name=".LoginChoice"
             android:exported="false" />
