--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".CardQueryHistoric"
+            android:exported="false" />
+        <activity
             android:name=".Avaliacao"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-
         </activity>
         <activity
             android:name=".CommunityHome"
@@ -45,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".Login"
             android:exported="false" />
@@ -64,12 +66,7 @@
         <!-- android:exported="false" /> -->
         <activity
             android:name=".splash"
-            android:exported="true">
-
-
-
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".LoginChoice"
             android:exported="false" />
