--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,10 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
 }
 
 android {
     compileSdk 32
-
-    viewBinding {
-        enabled = true
-    }
 
     defaultConfig {
         applicationId "com.example.cpaweb"
@@ -17,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField("String","WEB_CLIENT_ID",'"484994491662-1rtc8incv1dpgdjjkedbsigavqcmrbp8.apps.googleusercontent.com"')
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -27,13 +24,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     namespace 'com.example.cpaweb'
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -51,4 +52,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.caverock:androidsvg:1.4'
+
+//    implementation 'com.google.api-client:google-api-client-gson:1.31.1'
+//    implementation 'com.google.api-client:google-api-client-jackson2:1.31.1'
+    implementation 'com.google.guava:guava:30.1-android'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation ('com.google.api-client:google-api-client-android:1.31.1'){
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.google.guava'
+    }
+    implementation ('com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'){
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.google.guava'
+    }
 }
